# bbcwipi

./: CMakeLists.txt  ansi.h  blink.c  commands.h  debug.h  lwipopts.h  pifi-firmware.c  rxtx.c  rxtx.h  status.c  status.h  userport.c  userport.h  wipi-firmware.c
schematics/: wipi.fzz  wipi_v2.fzz
schematics/Gerber/: wipi_contour.gm1  wipi_copperBottom.gbl  wipi_copperTop.gtl  wipi_drill.txt  wipi_maskBottom.gbs  wipi_maskTop.gts  wipi_pnp.txt  wipi_silkBottom.gbo  wipi_silkTop.gto
